<resources>
    <string name="app_name">EV Calculator</string>
    <string name="splash_ev_design">EV Design</string>
    <string name="splash_subhead">Calculator</string>

    <string name="mass_prompt">Mass</string>
    <string name="select_prompt">select</string>
    <string name="gear_ratio_prompt">Gear Ratio</string>
    <string name="transmission_efficiency_prompt">Transmission Efficiency</string>
    <string name="rolling_resistance_prompt">Rolling Resistance</string>
    <string name="drag_coeff_prompt">Drag Coefficient</string>
    <string name="vehicle_frontal_area_prompt">Vehicle Frontal Area</string>
    <string name="wheel_radius_prompt">Wheel Radius</string>
    <string name="velocity_prompt">Velocity</string>
    <string name="gradient_prompt">Gradient</string>
    <string name="i">i</string>
    <string name="about">Skill Shark is an EduTech start-up focused on imparting 21st-century skills to youth. What differentiates us from the others is our approach and motive to impart skills dedicated to making experts out of learners.Focusing only on the delivery of skill-oriented services to educational Institutes and Youth. \n \n \n Globalization and the Fourth Industrial Revolution have increased the pace of change in work force markets, putting a premium on right skills and adaptability. Public policies should now shift to empowering and enabling workers to cope with transition,via income support, and also support incentives and opportunities for deskilling and upgrading skills. \n \n \n This is critical for addressing job displacement. Unemployment is a global problem with more than 73 million youth unemployed worldwide. In India, the unemployment rate among youth is almost 13 percent.The missing link is skilldevelopment, which is the key ingredient to robust economic growth. \n \n W W W . S K I L L S H A R K . C O M
    </string>
    <string name="mass_an">Mass (M): Total Mass of Vehicle (Inclusive of Driver, Body, Frame or Chassis, Power Train and Other Components) that has to be driven by an electric motor of an EV. A typical car may require more than 770 kilograms of steel, 180 kilograms of iron, 110 kilograms of plastics, 80 kilograms of aluminum, and 60 kilograms of rubber, as well as, less significant amounts of different materials. The total mass of an average car may be about 1500 kilograms. Addition of 400 Kg Passenger Weight and 100 Kg Luggage will give total considerable weight for motor as 2000 Kg</string>

    <string-array name="weight_array">
        <item>Kilogram[Kg]</item>
        <item>Milligram[mg]</item>
        <item>Gram[g]</item>
        <item>Tonne[t]</item>
        <item>Ounce[oz]</item>
        <item>Stone[s]</item>
        <item>UK Hundred Weight[cwt]</item>
        <item>UK Long Ton[ton]</item>
    </string-array>

    <string-array name="select">
        <item>Range[Km]</item>
        <item>Capacity[Ah]</item>
    </string-array>

    <string-array name="gear_ratio_array">
        <item>No unit</item>
    </string-array>

    <string-array name="transmission_efficiency_array">
        <item>%</item>
    </string-array>

    <string-array name="rolling_resistance_array">
        <item>No unit</item>
    </string-array>

    <string-array name="drag_coeff_array">
        <item>No unit</item>
    </string-array>

    <string-array name="vehicle_frontal_area_array">
        <item>Sq. Metre(s) [m2]</item>
        <item>Sq. Millimeter(s) [mm2]</item>
        <item>Sq. Centimeter(s) [cm2]</item>
        <item>Hectare(s) [ha]</item>
        <item>Sq. Kilometre(s) [km2]</item>
        <item>Sq. Inch(s) [in2]</item>
    </string-array>

    <string-array name="wheel_radius_array">
        <item>Metre(s) [m]</item>
        <item>Millimeter(s) [mm]</item>
        <item>Centimeter(s) [cm]</item>
        <item>Kilometre(s) [km]</item>
        <item>Inch(s) [in]</item>
        <item>Feet(s) [ft]</item>
    </string-array>

    <string-array name="velocity_array">
        <item>km/h</item>
        <item>m/s</item>
        <item>ft/min</item>
        <item>ft/s</item>
    </string-array>

    <string-array name="gradient_array">
        <item>degree</item>
    </string-array>

</resources>
